# dnacentersdk

./: .flake8  .gitattributes  .gitignore  .readthedocs.yml  .test.flake8  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  file.txt  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txtv  setup.cfg  setup.py  test_new.py
.github/ISSUE_TEMPLATE/: bug_report.md
dnacentersdk/: __init__.py  _metadata.py  _version.py  a.json  config.py  environment.py  exceptions.py  generator_containers.py  response_codes.py  restsession.py  utils.py
dnacentersdk/api/: __init__.py  authentication.py  clients.py  command_runner.py  commandrunner.py  custom_caller.py  devices.py  event_management.py  fabric_wired.py  fabricwired.py  file.py  network_discovery.py  networkdiscovery.py  networks.py  non_fabric_wireless.py  nonfabricwireless.py  path_trace.py  pathtrace.py  pnp.py  site_profile.py  siteprofile.py  sites.py  swim.py  tag.py  task.py  template_programmer.py  templateprogrammer.py
dnacentersdk/models/: mydict.py  schema_validator.py
docker/: Dockerfile  bootstrap.py  requirements.txt
docker/example_scripts/: dnacentersdk_example.py  hello_world_reply.py
docs/: CHANGELOG.rst  Makefile  code_of_conduct.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  sureshot.pub
docs/_static/: style.css
docs/_templates/: genindex.html
docs/api/: api.rst  api_structure_table.rst  api_structure_table_v1_2_10.rst  api_structure_table_v1_3_0.rst  api_structure_table_v1_3_1.rst  api_structure_table_v1_3_3.rst  api_structure_table_v2_1_1.rst  api_structure_table_v2_1_2.rst  api_structure_table_v2_2_1.rst  api_structure_table_v2_2_2_3.rst  api_structure_table_v2_2_3_3.rst  api_structure_table_v2_3_2_0.rst  api_structure_table_v2_3_3_0.rst  api_structure_table_v2_3_5_3.rst  api_structure_table_v2_3_7_3.rst  api_structure_table_v2_3_7_5.rst  api_structure_table_v2_3_7_6.rst  api_structure_table_v2_3_7_9.rst  api_structure_table_v3_1_3_0.rst  api_structure_table_v3_1_6_0.rst  intro.rst  quickstart.rst  tabla_reparada.rst
docs/html/: .buildinfo  code_of_conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
script/: README.md  build  ci  clean  console  installdeps  ipython_console.py  setup  test  update
tests/: config.py  conftest.py  environment.py  test_dnacentersdk.py  test_importsdk.py  test_restsession.py
tests/api/: __init__.py  test_Authentication.py  test_Clients.py  test_CommandRunner.py  test_Devices.py  test_FabricWired.py  test_File.py  test_NetworkDiscovery.py  test_Networks.py  test_NonFabricWireless.py  test_PathTrace.py  test_Pnp.py  test_SiteProfile.py  test_Sites.py  test_Swim.py  test_Tag.py  test_Task.py  test_TemplateProgrammer.py  test_command_runner.py  test_custom_caller.py  test_fabric_wired.py  test_network_discovery.py  test_non_fabric_wireless.py  test_path_trace.py  (+2 more)
(+12235 files in other folders)
