[tool.poetry]
name = "dnacentersdk"
version = "2.6.2"
description = "Cisco DNA Center Platform SDK"
authors = ["Jose Bogarin Solano <jbogarin@altus.cr>", "William Astorga <wastorga@altus.cr>", "Francisco Muñoz <fmunoz@altus.cr>", "Francisco Muñoz <fmunoz@altus.cr>", "Bryan Vargas <bvargas@altus.cr>"]
license = "MIT"
homepage = "https://dnacentersdk.readthedocs.io/en/latest/"
repository = "https://github.com/cisco-en-programmability/dnacentersdk"
keywords = ["Cisco", "DNA Center", "SDK"]
classifiers = [
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
fastjsonschema = "^2.16.2"
future = "^0.18.2"
requests-toolbelt = "^0.10.1"

[tool.poetry.dev-dependencies]
sphinx = "^5.0.0"
sphinx-rtd-theme = "*"
pytest = "*"
pytest-rerunfailures = "^10.3"
flake8 = "*"
ipython = "*"
readthedocs-sphinx-search = "^0.1.0"
setuptools_scm = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
